1. Added Player Inventory
    - Open and close by pressing "B"
    - Close by pressing ESC
2. Attack towards mouse
    - Player attacks towards mouse with an arc of 90 degrees
    - Player faces mouse direction
3. Basic player and enemy sprites
    - Player sprite drawn and animated for moving left and right
    - Enemy sprite drawn (not animated) moving left and right
    - Player sprite animated for attack motion, in the direction of the mouse
4. Complex loot
    - Loot appears in player inventory when using self.player.add_item("ITEM") function
5. NPCs
    - Added NPC that is interactive
    - Click on NPC when within 150 pixels
    - Dialog pops up from NPC
    - Options to reply to NPC
    - Multiple screens when talking with NPC depending on option selected
    - NPC adds item to player inventory
    - NPC has new dialog after giving item to player
    - Dialog can by closed by pressing "T" or ESC
    9/24 - Improved Dialog to better conform to a more modular format
6. Map
    - Added many trees, Mobs, to map
    - Added NPC to map
    - Added wall around map that is impassable
7. Player damage mitigation
    - Player will only take damage if he has not taken damage in an amount of time equal to a variable in Settings
8. Pause Menu
    - Added functions to pause menu, Save, Load, Resume, Main Menu
    - Main Menu and Resume work as expected
    - Save and load will need a framework upgrade to make happen

Bug Fixes
    - Wall clipping
    - Player / Mob hit rect collisions
    - Player / Mob __init__ rect spawn location