@@ -18,6 +18,7 @@ from os import path
 from tilemap import *
 from NPC.NPC import *
 from NPC.Conversations import conversation_options
+from NPC.Quests import Quests
 
 
 def text_objects(text, font):
@@ -132,7 +133,7 @@ class Game:
         # Class variable initiation
         self.mouse_dir = None
 
-        # Load Spritesheet image
+        # Load Spritesheet image for animations
         self.spritesheet_k_r = Spritesheet(path.join(img_folder, "Knight.png"))
         self.spritesheet_k_l = Spritesheet(path.join(img_folder, "Knight Left.png"))
         self.spritesheet_k_a_r = Spritesheet(path.join(img_folder, "Knight Attack Pose.png"))
@@ -180,8 +181,13 @@ class Game:
                 Mob(self, object_center.x, object_center.y)
             if tile_object.name == "Wall":
                 Obstacle(self, tile_object.x, tile_object.y, tile_object.width, tile_object.height)
-            if tile_object.name == "NPC":
+            # check name: NPC and type for NPC ID
+            # This could use a more elegant implementation because it will quickly get out of hand with many
+            # NPC characters
+            if tile_object.name == "NPC" and tile_object.type == "1":
                 TestNPC(self, object_center.x, object_center.y)
+            if tile_object.name == "NPC" and tile_object.type == "2":
+                QuestNPC(self, object_center.x, object_center.y)
 
         # Create the camera object
         self.camera = Camera(self.map.width, self.map.height)
@@ -203,7 +209,10 @@ class Game:
 
     def update(self):
         # update portion of the game loop
+
+        # Get the direction of the mouse relative to the character
         self.mouse_dir = vec(self.camera.mouse_adjustment(pg.mouse.get_pos())) - vec(self.player.pos)
+
         self.all_sprites.update()
         self.camera.update(self.player)
 
@@ -224,10 +233,12 @@ class Game:
         for y in range(0, HEIGHT, TILESIZE):
             pg.draw.line(self.screen, LIGHTGREY, (0, y), (WIDTH, y))
 
+    # Trigger inventory screen
     def open_inventory(self):
         if self.show_inventory:
             self.draw_player_inventory(self.screen, 750, 150, self.player.inventory)
 
+    # Draw inventory on screen
     def draw_player_inventory(self, surf, x, y, inventory):
         box_height = 500
         box_width = 250
@@ -240,19 +251,23 @@ class Game:
 
         mouse = pg.mouse.get_pressed()
 
+        # check if mouse is over item and inventory and highlight blue if that is the case
         for position, item in enumerate(inventory):
             rect = pg.Rect(x + 5, y + 15 + (position * text_height), box_width, text_height)
             if rect.collidepoint(pg.mouse.get_pos()):
                 self.draw_text(item, self.inventory_font, 20, BLUE, x + 5, y + 15 + (position * text_height), "w")
+                # If the item is left clicked, tell the player to use the item
                 if mouse[0]:
                     self.player.use_item(position)
             else:
                 self.draw_text(item, self.inventory_font, 20, WHITE, x + 5, y + 15 + (position * text_height), "w")
 
+    # Trigger dialog
     def open_dialog(self):
         if self.dialog:
             self.draw_dialog(self.screen, self.dialog_text, self.dialog_options)
 
+    # Draw dialog
     def draw_dialog(self, surf, message, options):
         x = 100
         y = 500
@@ -273,9 +288,11 @@ class Game:
         for position, option in enumerate(options):
             option_text = conversation_options["ID"][option]["Text"]
             rect = pg.Rect(x + 5, y + 15 + (position * text_height), box_width, text_height)
+            # Change dialog text color, just like in inventory
             if rect.collidepoint(pg.mouse.get_pos()):
                 self.draw_text(option_text, self.inventory_font,
                                20, BLUE, x + 5, y + 15 + (position * text_height), "w")
+                # If dialog option is clicked, pass that to the NPC
                 if mouse[0]:
                     self.dialog_selection = option
             else:
@@ -290,6 +307,7 @@ class Game:
         self.draw_text("MOTHA' FUCKIN' PAUSED", self.gameover_font, 70, WHITE, WIDTH / 2, HEIGHT / 4,
                        align='center')
 
+        # Add menu, find mouse position and options
         mouse = pg.mouse.get_pressed()
         y = 350
         spacing = 100
@@ -300,6 +318,7 @@ class Game:
             2: "Main Menu",
             3: "Resume"
         }
+        # Change color of option moused over and select it by clicking, just like inventory screen
         for position, option in enumerate(menu_options):
             rect = pg.Rect(0, y + (position * spacing) - (spacing / 2), WIDTH, spacing)
             if rect.collidepoint(pg.mouse.get_pos()):
@@ -311,6 +330,7 @@ class Game:
                 self.draw_text(menu_options[position], self.gameover_font, 50, WHITE, WIDTH / 2,
                                y + (position * spacing), align="center")
 
+        # Handle option chosen
         if self.pause_menu_selection == 0:
             self.save_game()
         elif self.pause_menu_selection == 1:
@@ -320,18 +340,23 @@ class Game:
         elif self.pause_menu_selection == 3:
             self.resume_game()
 
+    # Placeholder for game save
     def save_game(self):
         self.pause_menu_selection = None
         print("saved")
 
+    # Placeholder for game load
     def load_game(self):
         self.pause_menu_selection = None
         print("loaded")
 
+    # Go to main menu, resets game
+    # Can also resume game from where pause screen was
     def load_main_menu(self):
         self.pause_menu_selection = None
         self.playing = False
 
+    # Resume game
     def resume_game(self):
         self.pause_menu_selection = None
         self.paused = False
@@ -383,8 +408,10 @@ class Game:
                     # Show inventory
                     self.show_inventory = not self.show_inventory
                 if event.key == pg.K_h:
+                    # Show rects
                     self.draw_debug = not self.draw_debug
                 if event.key == pg.K_t:
+                    # Close dialog if it is open
                     self.dialog = False
 
     def draw_text(self, text, font_name, size, color, x, y, align="nw"):
