@@ -4,10 +4,12 @@ from itertools import cycle
 from Settings import *
 from Sprites import collide_with_walls, collide_hit_rect
 from NPC.Conversations import npc_conversations, conversation_options
+from NPC.Quests import Quests
 
 vec = pg.math.Vector2
 
 
+# Master class for NPC
 class NonPlayerCharacter(pg.sprite.Sprite):
     def __init__(self, game, x, y):
         self.groups = game.all_sprites, game.npcs
@@ -39,6 +41,7 @@ class NonPlayerCharacter(pg.sprite.Sprite):
         self.quest_id = None
         self.dialog_shortcut = npc_conversations["Dialog ID"]
 
+    # Check if the NPC was clicked and the player is close enough. Also checks if the player has walked away
     def get_clicked(self):
         mouse = pg.mouse.get_pressed()
 
@@ -51,10 +54,11 @@ class NonPlayerCharacter(pg.sprite.Sprite):
                     self.click_delay = now
                     if 0 < dist.length() < SPEAK_RANGE:
                         self.active = True
-        if dist.length() > SPEAK_RANGE:
+        if dist.length() > SPEAK_RANGE and self.active:
             self.active = False
             self.reset_dialog()
 
+    # Will reset the dialog data
     def reset_dialog(self):
         self.game.dialog = False
         self.game.dialog_selection = None
@@ -62,15 +66,20 @@ class NonPlayerCharacter(pg.sprite.Sprite):
         self.game.dialog_options = []
         self.active = False
 
+    # Used by main.py to get the text and options to display
     def get_dialog_text_and_options(self):
         text = self.dialog_shortcut[self.dialog_step]["Text"]
         options = self.dialog_shortcut[self.dialog_step]["options"]
 
         return text, options
 
+    # Fill this in!
+    # Handle the dialog user interface
     def handle_dialog(self, *args):
         pass
 
+    # Fill this in!
+    # Update the npc on the screen
     def update(self):
         pass
 
@@ -86,14 +95,6 @@ class TestNPC(NonPlayerCharacter):
             self.images[image].set_colorkey(BG_SPRITE_COLOR)
         self.id = 1
         self.dialog_step = 1
-
-    def dialog_text(self):
-        text = ""
-        options = []
-        if self.dialog_step == "initial":
-            text, options = self.get_dialog_text_and_options()
-
-        return text, options
 
     def handle_dialog(self, quest, conv_link, end_dialog, tags):
         self.quest_id = quest
@@ -126,6 +127,72 @@ class TestNPC(NonPlayerCharacter):
         self.hit_rect.centery = self.pos.y
         collide_with_walls(self, self.game.walls, 'y')
         self.rect.center = self.hit_rect.center
+
+        if self.active:
+            if self.game.dialog_selection is None:
+                self.game.dialog = True
+                self.game.dialog_text, self.game.dialog_options = self.get_dialog_text_and_options()
+            else:
+                self.handle_dialog(conversation_options["ID"][self.game.dialog_selection]["Quest ID"],
+                                   conversation_options["ID"][self.game.dialog_selection]["Conversation Link ID"],
+                                   conversation_options["ID"][self.game.dialog_selection]["End Dialog"],
+                                   conversation_options["ID"][self.game.dialog_selection]["Tags"])
+
+
+class QuestNPC(NonPlayerCharacter):
+    def __init__(self, game, x, y):
+        NonPlayerCharacter.__init__(self, game, x, y)
+        self.images = {
+            "NPC_r": self.game.spritesheet_k_r.get_image(0, 0, 100, 100)
+        }
+        self.image = self.images["NPC_r"]
+        for image in self.images:
+            self.images[image].set_colorkey(BG_SPRITE_COLOR)
+        self.id = 2
+        self.dialog_step = 4
+
+    def handle_dialog(self, quest, conv_link, end_dialog, tags):
+        self.quest_id = quest
+        self.dialog_step = conv_link
+        if end_dialog:
+            self.reset_dialog()
+        else:
+            self.reset_dialog()
+            self.active = True
+        if "quest complete" in tags:
+            self.game.player.add_item(Quests["Quest ID"][1]["Reward"])
+
+    # Check if quest is complete
+    def quest_status(self):
+        # Check status of quest id 1
+        if self.quest_id == 1:
+            if len(self.game.mobs) == 9:
+                self.dialog_step = 7
+                Quests["Quest ID"][1]["Complete"] = True
+
+    def update(self):
+        self.get_clicked()
+        if self.health <= 0:
+            self.kill()
+        # self.rot = (self.game.player.pos - self.pos).angle_to(vec(1, 0))
+        self.rect = self.image.get_rect()
+        self.rect.center = self.pos
+        self.acc = vec(NPC_SPEED, 0).rotate(-self.rot)
+        self.acc += self.vel * -1
+        self.vel += self.acc * self.game.dt
+        self.pos += self.vel * self.game.dt + 0.5 * self.acc * self.game.dt ** 2
+        self.hit_rect.centerx = self.pos.x
+        if self.vel.x >= 0:
+            self.image = self.images["NPC_r"]
+        else:
+            self.image = self.images["NPC_r"]
+        collide_with_walls(self, self.game.walls, 'x')
+        self.hit_rect.centery = self.pos.y
+        collide_with_walls(self, self.game.walls, 'y')
+        self.rect.center = self.hit_rect.center
+
+        # If player has accepted quest, check if quest is complete
+        self.quest_status()
 
         if self.active:
             if self.game.dialog_selection is None:
