@@ -1,3 +1,9 @@
+"""
+Another .json type file
+
+Information on quests, can be altered by NPCs in  the game
+"""
+
 Quests = {
     "Quest ID": {
         1: {
@@ -6,7 +12,7 @@ Quests = {
             "End NPC ID": 2,
             "Prerequisites": None,
             "Requirement": "All mobs killed",
-            "Reward": "health",
+            "Reward": "Health",
             "Complete": False
         }
     }
