@@ -20,13 +20,20 @@
     - NPC has new dialog after giving item to player
     - Dialog can by closed by pressing "T" or ESC
     9/24 - Improved Dialog to better conform to a more modular format
-6. Map
+6. Quests
+    - Added Quest giver NPC
+    - Gives player quest to kill all zombies
+    - Player can accept or delcine the quest
+    - If player accepts, they can then decline the quest
+    - Once condition is met, new dialog is unlocked
+    - Player will get reward from NPC
+7. Map
     - Added many trees, Mobs, to map
     - Added NPC to map
     - Added wall around map that is impassable
-7. Player damage mitigation
+8. Player damage mitigation
     - Player will only take damage if he has not taken damage in an amount of time equal to a variable in Settings
-8. Pause Menu
+9. Pause Menu
     - Added functions to pause menu, Save, Load, Resume, Main Menu
     - Main Menu and Resume work as expected
     - Save and load will need a framework upgrade to make happen
@@ -35,3 +42,4 @@ Bug Fixes
     - Wall clipping
     - Player / Mob hit rect collisions
     - Player / Mob __init__ rect spawn location
+    - Placed old mat txt files into maps folder, they can probably be removed entirely
